tests/fail/invalid_log_level.rs
#[log_attributes::log(asdf, "{fn} was executed")]
fn invalid_log_level() {}

fn main() {}
