tests/fail/invalid_log_level.stderr
error: Failed to parse log level
       error: attempted to convert a string that doesn't match an existing log level
       note: The log level should be provided as an identifier without quotes
       example: #[log(info, "{fn} returned {return}")]
 --> tests/fail/invalid_log_level.rs:1:23
  |
1 | #[log_attributes::log(asdf, "{fn} was executed")]
  |                       ^^^^
